# Talon

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Talon.yaml  build.bat  build.sh  dependencies.yaml  test.tln
src/: main.cpp
src/Compiler/: Compiler.cpp  Compiler.h
src/Lexer/: Lexer.cpp  Lexer.h
src/YAML/: YAMLMan.cpp  YAMLMan.h
